# neuropath

./: .env  .env.example  .gitignore  README.md  api.py  app.py  log.txt  main.py  pyproject.toml  req.txt
.streamlit/: config.toml
content/: content.json  content_az104_revised.json  content_updated.json
content/knowlege_base/: ai_102_gpt.txt
content/transcripts/: ai_102_yt.txt
files/: AI-900_flashcards.csv  AI-900_results.json  AI-900_targeted_questions.json  AZ-900_flashcards.csv  AZ-900_results.json  AZ-900_targeted_questions.json  DP-900_results.json  DP-900_targeted_questions.json  consolidated_feedback.csv  questions_AI-900.json  questions_AZ-900.json  questions_DP-900.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/feedback/: page.tsx
frontend/src/app/questions/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/components/ask/: AskForm.tsx  QuestionAnswer.tsx
frontend/src/components/feedback/: DetailedQuestionReview.tsx  FeedbackSelector.tsx  PerformanceBySkill.tsx
frontend/src/components/global/: Button.tsx  Input.tsx  Loading.tsx  PageTitle.tsx  Radio.tsx  Select.tsx  TextArea.tsx
frontend/src/components/home/: PagesCards.tsx  Welcome.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/questions/: QuestionsForm.tsx
frontend/src/components/simulation/: SimulationSelector.tsx
frontend/src/domain/constants/: apiUrl.ts  certifications.ts  navBarItems.ts  pagesCardsData.ts
frontend/src/domain/services/: apiService.js
frontend/src/domain/types/: NavBarItem.ts  (+1 more)
prompts/: prompts.py
scripts/: demo_fundamentals_qa_generator.py
services/: azure_ai_client.py  concept_extractor.py  exam_data_loader.py  feedback_service.py  feedback_web_service.py  flashcard_export_service.py  image_generation_service.py  import_test.py  podcast_generation_service.py  q_test.py  question_service.py  simulation_service.py  simulation_web_service.py
tests/: test_reinforcement_services.py
utils/: utils.py
(+6 files in other folders)
